# QCE24-QRE-Challenge

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
LaTeX/: QCE24 QRE Challenge Report.aux  QCE24 QRE Challenge Report.aux.blg  QCE24 QRE Challenge Report.bbl  QCE24 QRE Challenge Report.bcf  QCE24 QRE Challenge Report.blg  QCE24 QRE Challenge Report.out  QCE24 QRE Challenge Report.run.xml  QCE24 QRE Challenge Report.tex  bibliography.bib
notebooks/: azure_qre.ipynb  banded_circulant_inversion.ipynb  block_encoding_demo.ipynb  matrix_inversion_demo.ipynb  pulse_sequence_exploration.ipynb  pyqsp_exploration.ipynb  qsvt_demo.ipynb
notebooks/demonstrations/: 1_block_encoding_demo.ipynb  2_qsvt_demo.ipynb  3_matrix_inversion_demo.ipynb  README.md  block_encoding_demo.ipynb  hhl_demo.ipynb  matrix_inversion_demo.ipynb  qsvt_demo.ipynb
notebooks/exploration/: azure_qre.ipynb  data_fitting_block_encoding_runtime.ipynb  data_fitting_qubits.ipynb  data_fitting_runtime.ipynb  pyqsp_exploration.ipynb  qiskit_to_qsharp.ipynb  qiskit_transpilation.ipynb
notebooks/result_generation/: block_encoding_results.ipynb  qsvt_results.ipynb
notebooks/result_plotting/: README.md  block_encoding_runtime.ipynb  qsvt_qubits.ipynb  qsvt_runtime.ipynb
qasm_circuits/: block_encoding_1024  block_encoding_128  block_encoding_16  block_encoding_2048  block_encoding_256  block_encoding_32  block_encoding_4  block_encoding_4096  block_encoding_512  block_encoding_64  block_encoding_8  block_encoding_8192  export_block_encoding_circuits.py  export_circuit_block_encoding.py  export_circuit_qsvt.py  export_qsvt_circuits.py  qsvt_1024_0.1  qsvt_128_0.1  qsvt_16_0.1  qsvt_256_0.1  qsvt_32_0.1  qsvt_4_0.1  qsvt_512_0.1  qsvt_64_0.1  qsvt_8_0.1
qasm_circuits/block_encoding_circuits/: block_encoding_1024  block_encoding_128  block_encoding_16  block_encoding_2048  block_encoding_256  block_encoding_32  block_encoding_4  block_encoding_4096  block_encoding_512  block_encoding_64  block_encoding_8  block_encoding_8192
qasm_circuits/qsvt_circuits/: qsvt_16  (+3 more)
qce24_qre_challenge/: __init__.py
sparse_matrices/: __init__.py  banded_circulant_matrix.py  sparse_matrices.py
tests/: __init__.py
(+19 files in other folders)
