[tool.poetry]
name = "qce24-qre-challenge"
version = "0.1.0"
description = ""
authors = ["Walden-Killick <walden.killick@cambridgeconsultants.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
