[tool.poetry]
name = "qce24-qre-challenge"
version = "0.1.0"
description = ""
authors = ["Walden-Killick <walden.killick@cambridgeconsultants.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^1.1.1"
matplotlib = "^3.9.0"
pylatexenc = "^2.10"
pyqsp = "^0.1.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
